src/test/ui/regions/regions-infer-bound-from-trait.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/regions-infer-bound-from-trait.rs:21:9
   |
LL | fn foo2<'a,A:Static>(x: Inv<'static>, a: A) {
   |         ^^-
   |         |
   |         help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0309]: the parameter type `A` may not live long enough
  --> $DIR/regions-infer-bound-from-trait.rs:33:5
   |
LL | fn bar1<'a,A>(x: Inv<'a>, a: A) {
   |            - help: consider adding an explicit lifetime bound `A: 'a`...
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^
   |
note: ...so that the type `A` will meet its required lifetime bounds
  --> $DIR/regions-infer-bound-from-trait.rs:33:5
   |
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^

error[E0309]: the parameter type `A` may not live long enough
  --> $DIR/regions-infer-bound-from-trait.rs:37:5
   |
LL | fn bar2<'a,'b,A:Is<'b>>(x: Inv<'a>, y: Inv<'b>, a: A) {
   |               -- help: consider adding an explicit lifetime bound `A: 'a`...
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^
   |
note: ...so that the type `A` will meet its required lifetime bounds
  --> $DIR/regions-infer-bound-from-trait.rs:37:5
   |
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
